[package]
name = "pluck"
version = "0.1.1"
authors = ["Shelby Doolittle <shelby@shelbyd.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/shelbyd/pluck"
documentation = "https://docs.rs/pluck"
homepage = "https://github.com/shelbyd/pluck"
description = "Extract values conveniently."

[dependencies]

[badges]
